force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation_Item__c/tc9_ext_recon__Temp_Reconciliation_Item__c.object-meta.xml
<CustomObject>
    <description>Reconciliation Item object is the child object to the Reconciliation object. It holds the details around the reconciliation results for each payee based on payee aggregate record type and paycode</description>
    <label>Reconciliation Item</label>
    <nameField>
        <displayFormat>TRECI-{0000000000}</displayFormat>
        <label>Reconciliation Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reconciliation Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>