force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation_Item__c/fields/tc9_ext_recon__Temp_Amended_Payee_Aggregate_YTD__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Temp_Amended_Payee_Aggregate_YTD__c</fullName>
    <description>Stores the value that was entered by the user during the manage variances process</description>
    <inlineHelpText>Stores the value that was entered by the user during the manage variances process</inlineHelpText>
    <label>Amended Payee Aggregate YTD Value</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>