force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation_Item__c/fields/tc9_ext_recon__Temp_Date_Time_Finalised__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Temp_Date_Time_Finalised__c</fullName>
    <description>Defines the date time finalised from the most recent Pay Batch for this payee</description>
    <formula>tc9_ext_recon__Temp_Pay_Batch__r.tc9_pr__Date_Time_Finalised__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Defines the date time finalised from the most recent Pay Batch for this payee</inlineHelpText>
    <label>Date Time Finalised</label>
    <type>DateTime</type>
</CustomField>