force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation_Item__c/fields/tc9_ext_recon__Temp_Deductions_Post_Tax__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Temp_Deductions_Post_Tax__c</fullName>
    <description>Defines the YTD total for Deductions - Post Tax from the payee aggregate</description>
    <inlineHelpText>Defines the YTD total for Deductions - Post Tax from the payee aggregate</inlineHelpText>
    <label>Deductions - Post Tax</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>