force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation_Item__c/fields/tc9_ext_recon__Temp_FBT_Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Temp_FBT_Pay_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To capture the FBT Pay Code for FBT Reconciliation</description>
    <inlineHelpText>To capture the FBT Pay Code for FBT Reconciliation</inlineHelpText>
    <label>FBT Pay Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_pr__Pay_Code__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>FBT</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Pay_Code__c</referenceTo>
    <relationshipLabel>Reconciliation Items (FBT Pay Code)</relationshipLabel>
    <relationshipName>Reconciliation_Items</relationshipName>
    <type>Lookup</type>
</CustomField>