force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation_Item__c/fields/tc9_ext_recon__Temp_FBT_Payee_Opening_Balance__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Temp_FBT_Payee_Opening_Balance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Payee Opening Balance created for FBT as part of the Reconciliation process</description>
    <inlineHelpText>The Payee Opening Balance created for FBT as part of the Reconciliation process</inlineHelpText>
    <label>FBT Payee Opening Balance</label>
    <referenceTo>tc9_pr__Payee_Opening_Balance__c</referenceTo>
    <relationshipLabel>Reconciliation Items</relationshipLabel>
    <relationshipName>Reconciliation_Items</relationshipName>
    <type>Lookup</type>
</CustomField>