force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation_Item__c/fields/tc9_ext_recon__Temp_FBT_Payee_Pay_Batch__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Temp_FBT_Payee_Pay_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for FBT Aggregate Reconciliation</description>
    <inlineHelpText>Used for FBT Aggregate Reconciliation</inlineHelpText>
    <label>FBT Payee Pay Batch</label>
    <referenceTo>tc9_pr__Pay_Batch_Item__c</referenceTo>
    <relationshipLabel>Reconciliation Items</relationshipLabel>
    <relationshipName>Reconciliation_Items</relationshipName>
    <type>Lookup</type>
</CustomField>