force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation_Item__c/fields/tc9_ext_recon__Temp_FBT_Year__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Temp_FBT_Year__c</fullName>
    <description>Used for FBT Reconciliation</description>
    <inlineHelpText>Used for FBT Reconciliation</inlineHelpText>
    <label>FBT Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>