force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation_Item__c/fields/tc9_ext_recon__Temp_Opening_Balance_YTD__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Temp_Opening_Balance_YTD__c</fullName>
    <description>Defines the opening balance value for the related payee aggregate</description>
    <inlineHelpText>Defines the opening balance value for the related payee aggregate</inlineHelpText>
    <label>Opening Balance YTD</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>