force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation_Item__c/fields/tc9_ext_recon__Temp_Pay_Batch__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Temp_Pay_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines which pay batch this reconciliation item is associated with</description>
    <inlineHelpText>Defines which pay batch this reconciliation item is associated with</inlineHelpText>
    <label>Pay Batch</label>
    <referenceTo>tc9_pr__Pay_Batch__c</referenceTo>
    <relationshipLabel>Reconciliation Items</relationshipLabel>
    <relationshipName>Temp_Reconciliation_Items</relationshipName>
    <type>Lookup</type>
</CustomField>