force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation_Item__c/fields/tc9_ext_recon__Temp_Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Temp_Pay_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the pay code of the source Record(s)</description>
    <inlineHelpText>Defines the pay code of the source Record(s)</inlineHelpText>
    <label>Pay Code</label>
    <referenceTo>tc9_pr__Pay_Code__c</referenceTo>
    <relationshipLabel>Reconciliation Items</relationshipLabel>
    <relationshipName>Temp_Reconciliation_Items</relationshipName>
    <type>Lookup</type>
</CustomField>