force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation_Item__c/fields/tc9_ext_recon__Temp_Payee__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Temp_Payee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent Payee record that is linked to the reconciliation item.</description>
    <inlineHelpText>The parent Payee record that is linked to the reconciliation item.</inlineHelpText>
    <label>Payee</label>
    <referenceTo>tc9_pr__Payee__c</referenceTo>
    <relationshipLabel>Reconciliation Items</relationshipLabel>
    <relationshipName>Temp_Reconciliation_Items</relationshipName>
    <type>Lookup</type>
</CustomField>