force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation_Item__c/fields/tc9_ext_recon__Temp_Payee_Aggregate_YTD__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Temp_Payee_Aggregate_YTD__c</fullName>
    <description>Defines the sum of all Payee Aggregates for the combination of Record Type and Pay code</description>
    <inlineHelpText>Defines the sum of all Payee Aggregates for the combination of Record Type and Pay code</inlineHelpText>
    <label>Payee Aggregate YTD</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>