force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation_Item__c/fields/tc9_ext_recon__Temp_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Temp_Payment_Date__c</fullName>
    <description>Defines the payment date from the most recent Pay Batch for this payee.</description>
    <formula>tc9_ext_recon__Temp_Pay_Batch__r.tc9_pr__Payment_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Defines the payment date from the most recent Pay Batch for this payee.</inlineHelpText>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>