force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation_Item__c/fields/tc9_ext_recon__Temp_Payment_Entity__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Temp_Payment_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines which payment entity this reconciliation item is associated with</description>
    <inlineHelpText>Defines which payment entity this reconciliation item is associated with</inlineHelpText>
    <label>Payment Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reconciliation Items</relationshipLabel>
    <relationshipName>Temp_Reconciliation_Items</relationshipName>
    <type>Lookup</type>
</CustomField>