force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation_Item__c/fields/tc9_ext_recon__Temp_Payments_Taxable__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Temp_Payments_Taxable__c</fullName>
    <description>Defines the YTD total for Payments - Taxable from the payee aggregate</description>
    <inlineHelpText>Defines the YTD total for Payments - Taxable from the payee aggregate</inlineHelpText>
    <label>Payments - Taxable</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>