force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation_Item__c/fields/tc9_ext_recon__Temp_Reconcile_Result__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Temp_Reconcile_Result__c</fullName>
    <description>Defines whether the payee has reconciled for the payee aggregate record type and pay code</description>
    <inlineHelpText>Defines whether the payee has reconciled for the payee aggregate record type and pay code</inlineHelpText>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_ext_recon__Temp_Reconciliation_Result</valueSetName>
    </valueSet>
</CustomField>