force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation_Item__c/fields/tc9_ext_recon__Temp_Reconcile_Variation__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Temp_Reconcile_Variation__c</fullName>
    <description>Defines the amount of variance if the payee aggregate has failed reconciliation</description>
    <inlineHelpText>Defines the amount of variance if the payee aggregate has failed reconciliation</inlineHelpText>
    <label>Variation</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>