force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation_Item__c/fields/tc9_ext_recon__Temp_Reconciliation_Master__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Temp_Reconciliation_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent reconciliation batch record</description>
    <inlineHelpText>Parent reconciliation batch record</inlineHelpText>
    <label>Reconciliation Master</label>
    <referenceTo>tc9_ext_recon__Temp_Reconciliation__c</referenceTo>
    <relationshipLabel>Reconciliation Items</relationshipLabel>
    <relationshipName>Temp_Reconciliation_Items</relationshipName>
    <type>Lookup</type>
</CustomField>