force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation_Item__c/fields/tc9_ext_recon__Temp_Source_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Temp_Source_Record_Type__c</fullName>
    <description>Defines the record type of the related payee aggregate record</description>
    <inlineHelpText>Defines the record type of the related payee aggregate record</inlineHelpText>
    <label>Source Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>