force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation_Item__c/fields/tc9_ext_recon__Temp_Withholding_STSL__c.field-meta.xml
<CustomField>
    <fullName>tc9_ext_recon__Temp_Withholding_STSL__c</fullName>
    <description>Defines the YTD total for Withholding - STSL from the payee aggregate</description>
    <inlineHelpText>Defines the YTD total for Withholding - STSL from the payee aggregate</inlineHelpText>
    <label>Withholding - STSL</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>