force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation_Item__c/recordTypes/tc9_ext_recon__Payroll.recordType-meta.xml
<RecordType>
    <fullName>tc9_ext_recon__Payroll</fullName>
    <active>true</active>
    <description>Used to define a child Payroll Reconciliation record</description>
    <label>Payroll</label>
</RecordType>