force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation_Item__c/recordTypes/tc9_ext_recon__Temp_FBT_Aggregate_Item.recordType-meta.xml
<RecordType>
    <fullName>tc9_ext_recon__Temp_FBT_Aggregate_Item</fullName>
    <active>true</active>
    <description>Used to define a reconciliation item that is used for the purpose of creating FBT Payee Aggregate and Opening Balances</description>
    <label>FBT Aggregate Item</label>
</RecordType>