force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation_Item__c/listViews/tc9_ext_recon__All.listView-meta.xml
<ListView>
    <fullName>tc9_ext_recon__All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>tc9_ext_recon__Temp_Employee__c</columns>
    <columns>tc9_ext_recon__Temp_Pay_Code__c</columns>
    <columns>tc9_ext_recon__Temp_Payment_Date__c</columns>
    <columns>tc9_ext_recon__Temp_Reconciliation_Master__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>tc9_ext_recon__Temp_Reconcile_Result__c</columns>
    <columns>tc9_ext_recon__Temp_Source_Record_Type__c</columns>
    <columns>tc9_ext_recon__Temp_Reconcile_Variation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>