force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation_Item__c/listViews/tc9_ext_recon__Failed_Reconciliation_Results.listView-meta.xml
<ListView>
    <fullName>tc9_ext_recon__Failed_Reconciliation_Results</fullName>
    <columns>NAME</columns>
    <columns>tc9_ext_recon__Temp_Payee__c</columns>
    <columns>tc9_ext_recon__Temp_Source_Record_Type__c</columns>
    <columns>tc9_ext_recon__Temp_Reconcile_Result__c</columns>
    <columns>tc9_ext_recon__Temp_Opening_Balance_YTD__c</columns>
    <columns>tc9_ext_recon__Temp_Pay_Transactions_YTD__c</columns>
    <columns>tc9_ext_recon__Temp_Payee_Aggregate_YTD__c</columns>
    <columns>tc9_ext_recon__Temp_Reconcile_Variation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>tc9_ext_recon__Temp_Reconcile_Result__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>tc9_ext_recon__Temp_Reconciliation_Item__c.tc9_ext_recon__Payroll</value>
    </filters>
    <label>Failed Reconciliation Results</label>
</ListView>