force-app/main/default/objects/tc9_ext_recon__Temp_Reconciliation_Item__c/listViews/tc9_ext_recon__FBT_List.listView-meta.xml
<ListView>
    <fullName>tc9_ext_recon__FBT_List</fullName>
    <columns>NAME</columns>
    <columns>tc9_ext_recon__Temp_Employee__c</columns>
    <columns>tc9_ext_recon__Temp_Payee__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>tc9_ext_recon__Temp_Payee_Aggregate_YTD__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>tc9_ext_recon__Temp_Reconciliation_Item__c.tc9_ext_recon__Temp_FBT_Aggregate_Item</value>
    </filters>
    <label>FBT List</label>
</ListView>